--- a/kosik.html
+++ b/kosik.html
@@ -48,7 +48,7 @@
                 <nav>
                     <ul id="navbar-2">
                         <li><a href="index.html">domov</a></li>
-                        <li><a href="">obchod</a></li>
+                        <li><a href="produkty.html">obchod</a></li>
                         <!-- <li><a href="">Promotion</a></li>
                         <li><a href="">Pages</a></li> -->
                         <li><a href="">Blog</a></li>
@@ -58,9 +58,9 @@
                 </nav>
                 <nav>
                     <ul id="navbar-3">
-                        <li><a href=""><i class="fas fa-search"></i></a></li>
-                        <li><a href=""><i class="fas fa-user"></i></a></li>
-                        <li><a href=""><i class="fas fa-shopping-cart"></i><span class="icon">0</span></a></li>
+                       <!-- <li><a href=""><i class="fas fa-search"></i></a></li>
+                        <li><a href=""><i class="fas fa-user"></i></a></li>-->
+                        <li><a href="kosik.html"><i class="fas fa-shopping-cart"></i><span class="icon">0</span></a></li>
                     </ul>
                 </nav>
             </div>
