--- a/produkty.html
+++ b/produkty.html
@@ -11,10 +11,7 @@
         @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-    <link rel="stylesheet" href="css/eshop.css">
-
-    <style></style>
-
+    <link rel="stylesheet" href="css/eshop.css"> 
 </head>
 
 <body>
@@ -45,8 +42,8 @@
             <div class="wrap-2">
                 <nav>
                     <ul id="navbar-2">
-                        <li><a href="">domov</a></li>
-                        <li><a href="">obchod</a></li>
+                        <li><a href="index.html">domov</a></li>
+                        <li><a href="produkty.html">obchod</a></li>
                         <!--<li><a href="">Promotion</a></li>
                         <li><a href="">Pages</a></li>-->
                         <li><a href="">Blog</a></li>
@@ -58,24 +55,86 @@
                     <ul id="navbar-3">
                         <li><a href=""><i class="fas fa-search"></i></a></li>
                         <li><a href=""><i class="fas fa-user"></i></a></li>
-                        <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
+                        <li><a href="kosik.html"><i class="fas fa-shopping-cart"></i></a></li>
                     </ul>
                 </nav>
             </div>
         </section>
     </header>
 
+    <!--<section>
+
+        <div class="part-2">
+
+            <div class="women">
+                <div class="theme">
+                    <a href="">women's</a>
+                </div>
+            </div>
+
+            <div class="accessories">
+                <div class="theme">
+                    <a href="">accessories's</a>
+                </div>
+            </div>
+
+            <div class="men">
+                <div class="theme">
+                    <a href="">men's</a>
+                </div>
+            </div>
+
+        </div>
+
+    </section>-->
+
+    <!--<section>
+        <div class="footer-1">
+            <div class="wrap-3">
+                <h2>Novinky</h2>
+                <h3>Subscribe to our newsletter and get 20% off your first purchase (TEXT ZMENIT!</h3>
+            </div>
+
+            <div class="payment">
+                <input type="text"placeholder='Hľadám tento tovar . . .'>
+                <button type="submit"><i class="fas fa-search"></i></button>
+            </div>
+        </div>
+    </section>-->
+
+                   <!--PRODUKT-->
+    <section> 
+        <div id="good" class="goodbox-1">
+            <!--<div  class="goods">
+               
+               <div class="tool-box pict-1">
+                    <a href=""></a>
+                </div>
+               
+                <div class="description">
+                    <p>Pánska športová mikina</p>
+                    <div class="values"><h4>€45.00</h4><span><del>€50.00</del></span></div>
+                </div>
+
+                <div class="cart">
+                    <a class="add-cart">do košíka</a> pridal som "add-cart" -pouzitie triedy v.js(vybratie vsetkych elementov pre ktory tento selektor plati)- na kazdy produkt na stranke domov
+                </div>
+            </div> 
+        </div> -->
+    </section>
+
+   <!--</section>
     <footer>
         <section class="footer-1">
 
             <div class="wrap-3">
-                <h2>Newsletter</h2>
-                <h3>Subscribe to our newsletter and get 20% off your first purchase</h3>
+                <h2>Novinky</h2>
+                <h3>Prihláste sa na odber letáku s novinkami a získajte zľavu 20% z prvého nákupu</h3>
             </div>
 
             <div class="payment">
-                <input type="text"placeholder='Názov produktu . . .'/>
-                <button type="submit"><i class="fas fa-search"></i></button>
+                <input type="text"placeholder='Môj e-mail . . . '>
+                <button type="submit"><i class="fas fa-check"></i></button>
             </div>
 
         </section>
@@ -88,7 +147,7 @@
                     <ul id="navbar-4">
                         <li><a href="">Blog</a></li>
                         <li><a href="">FAQs</a></li>
-                        <li><a href="">Contact us</a></li>
+                        <li><a href="">Kontakt</a></li>
                     </ul>
                 </nav>
 
@@ -105,14 +164,14 @@
             </div>
 
             <p>
-                &#169;2018 All Rights Reserved. Thus template is made with <span><i class="far fa-heart "></i></span> by <span>Colorlib</span>
+                &#169;2020 All Rights Reserved. Thus template is made with <span><i class="far fa-heart "></i></span> by <span>Colorlib</span>
             </p>
 
         </section>
 
-    </footer>
+    </footer>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../js/eshop.js"></script>
+    <script src="obchod.js"></script>
 </body>
 
 </html>
