--- a/index.html
+++ b/index.html
@@ -121,69 +121,69 @@
            
         <div class="goodbox-1">
                 
-                <div class="goods">
-                    <div class="tool-box pict-1">
-                        <a href=""></a>
-                    </div>
+            <div class="goods">
+                <div class="tool-box">
+                    <img src="img/product_1.png" alt="product_1">
+                    <a href=""></a>
+                </div>
                     <div class="description">
                         <p>Pánska športová mikina</p>
-                    <div class="values">
-                        <h4>€45.00</h4>
-                        <span><del>€50.00</del></span>
+                        <div class="values">
+                            <h4>€45.00</h4>
+                            <span><del>€50.00</del></span>
+                        </div>
                     </div>
+                <div class="cart">
+                    <a class="add-cart">do košíka</a> <!--pridal som "add-cart" -pouzitie triedy v.js(vybratie vsetkych elementov pre ktory tento selektor plati)- na kazdy produkt na stranke domov-->
                 </div>
-
-            <div class="cart">
-                <a class="add-cart">do košíka</a> <!--pridal som "add-cart" -pouzitie triedy v.js(vybratie vsetkych elementov pre ktory tento selektor plati)- na kazdy produkt na stranke domov-->
-            </div>
             </div>
 
             <div class="goods">
-
-            <div class="tool-box pict-2">
-                <a href=""></a>
-            </div>
-
+                <div class="tool-box">
+                    <img src="img/product_2.png" alt="product_1">
+                    <a href=""></a>
+                </div>
                 <div class="description wall">
                     <p>Dámska taška</p>
                     <div class="values">
                     <h4>€50.00</h4>
                     </div>
                 </div>
-
-            <div class="cart">
-                <a class="add-cart">do košíka</a>
-            </div>
-            </div>
-
-            <div class="goods">
-            <div class="tool-box pict-3"></div>
-
-            <div class="description">
-                <p>Dámsky pulóver</p>
-                <div class="values">
-                    <h4>€40.00</h4>
+                <div class="cart">
+                    <a class="add-cart">do košíka</a>
                 </div>
             </div>
 
-            <div class="cart">
-                <a class="add-cart">do košíka</a>
-            </div>
-            </div>
-
             <div class="goods">
-            <div class="tool-box pict-4"></div>
-
-            <div class="description wall">
-                <p>Dámska športová kabelka</p>
-                <div class="values">
-                    <h4>€30.00</h4>
+                <div class="tool-box">
+                    <img src="img/product_3.png" alt="product_1">
+                    <a href=""></a>
+                </div>
+                <div class="description">
+                    <p>Dámsky pulóver</p>
+                    <div class="values">
+                        <h4>€40.00</h4>
+                    </div>
+                </div>
+                <div class="cart">
+                    <a class="add-cart">do košíka</a>
                 </div>
             </div>
 
-            <div class="cart">
-                <a class="add-cart">do košíka</a>
-            </div>
+            <div class="goods">
+                <div class="tool-box">
+                    <img src="img/product_4.png" alt="product_1">
+                    <a href=""></a>
+                </div>
+                <div class="description wall">
+                    <p>Dámska športová kabelka</p>
+                    <div class="values">
+                        <h4>€30.00</h4>
+                    </div>
+                </div>
+                <div class="cart">
+                    <a class="add-cart">do košíka</a>
+                </div>
             </div>
             <!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
                 <!-- <div class="goods">
