--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </nav> -->
         <!--/////////////////////////////////////////////////////////////-->
            
-        <div class="goodbox-1">
+        <div class="good-box">
                 
             <div class="goods">
                 <div class="tool-box">
