--- a/produkty.html
+++ b/produkty.html
@@ -50,7 +50,7 @@
                         <!--<li><a href="">Promotion</a></li>
                         <li><a href="">Pages</a></li>-->
                         <li><a href="">Blog</a></li>
-                        <li><a href="">kontakt</a>
+                        <li><a href="kontakt.html">kontakt</a>
                         </li>
                     </ul>
                 </nav>
@@ -68,19 +68,19 @@
 
         <div class="part-2">
 
-            <div class="women">
+            <div class="category women">
                 <div class="theme">
                     <a href="">women's</a>
                 </div>
             </div>
 
-            <div class="accessories">
+            <div class="category accessories">
                 <div class="theme">
                     <a href="">accessories's</a>
                 </div>
             </div>
 
-            <div class="men">
+            <div class="category men">
                 <div class="theme">
                     <a href="">men's</a>
                 </div>
@@ -98,9 +98,9 @@
                     <h3>Subscribe to our newsletter and get 20% off your first purchase (TEXT ZMENIT!</h3>
                 </div>
 
-                <div class="payment">
-                    <input type="text"placeholder='Hľadám tovar . . .'>
-                    <button type="submit"><i class="fas fa-search"></i></button>
+                <div class="confirm">
+                    <input id="myInput" type="text" placeholder="Hľadám tovar . . .">
+                    <button type="submit" id="myBtn"><i class="fas fa-search"></i></button>
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
                 <h3>Prihláste sa na odber letáku s novinkami a získajte zľavu 20% z prvého nákupu</h3>
             </div>
 
-            <div class="payment">
+            <div class="confirm">
                 <input type="text"placeholder='Váš email . . . '>
                 <button type="submit"><i class="fas fa-check"></i></button>
             </div>
