--- a/kosik.html
+++ b/kosik.html
@@ -48,11 +48,11 @@
                 <nav>
                     <ul id="navbar-2">
                         <li><a href="index.html">domov</a></li>
-                        <li><a href="produkty.html">obchod</a></li>
+                        <li><a href="">obchod</a></li>
                         <!-- <li><a href="">Promotion</a></li>
                         <li><a href="">Pages</a></li> -->
                         <li><a href="">Blog</a></li>
-                        <li><a href="kontakt.html">kontakt</a>
+                        <li><a href="">kontakt</a>
                         </li>
                     </ul>
                 </nav>
