--- a/kosik.html
+++ b/kosik.html
@@ -49,18 +49,13 @@
                     <ul id="navbar-2">
                         <li><a href="index.html">domov</a></li>
                         <li><a href="produkty.html">obchod</a></li>
-                        <!-- <li><a href="">Promotion</a></li>
-                        <li><a href="">Pages</a></li> -->
-                        <li><a href="">Blog</a></li>
                         <li><a href="kontakt.html">kontakt</a>
                         </li>
                     </ul>
                 </nav>
                 <nav>
                     <ul id="navbar-3">
-                        <li><a href=""><i class="fas fa-search"></i></a></li>
-                        <li><a href=""><i class="fas fa-user"></i></a></li>
-                        <li><a href=""><i class="fas fa-shopping-cart"></i><span class="icon">0</span></a></li>
+                        <li><a href="kosik.html"><i class="fas fa-shopping-cart"></i><span class="icon">0</span></a></li>
                     </ul>
                 </nav>
             </div>
@@ -81,9 +76,10 @@
                 <th class="product-title">PRODUKT</th>
                 <th class="price">CENA PRODUKT</th>
                 <th class="quantity">MNOŽSTVO</th>
-                <th class="total"> CENA</th>
+                <th class="total"> CENA SPOLU</th>
             </thead>
             <tbody class="products"></tbody>
+            
         </table>
                 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
