--- a/kontakt.html
+++ b/kontakt.html
@@ -45,12 +45,9 @@
             <div class="wrap-2">
                 <nav>
                     <ul id="navbar-2">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Shop</a></li>
-                        <li><a href="">Promotion</a></li>
-                        <li><a href="">Pages</a></li>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">Contact</a>
+                        <li><a href="index.html">domov</a></li>
+                        <li><a href="produkty.html">obchod</a></li>
+                        <li><a href="kontakt.html">kontakt</a>
                         </li>
                     </ul>
                 </nav>
@@ -58,7 +55,7 @@
                     <ul id="navbar-3">
                         <li><a href=""><i class="fas fa-search"></i></a></li>
                         <li><a href=""><i class="fas fa-user"></i></a></li>
-                        <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
+                        <li><a href="kosik.html"><i class="fas fa-shopping-cart"></i></a></li>
                     </ul>
                 </nav>
             </div>
