--- a/kosik.html
+++ b/kosik.html
@@ -49,6 +49,7 @@
                     <ul id="navbar-2">
                         <li><a href="index.html">domov</a></li>
                         <li><a href="produkty.html">obchod</a></li>
+                        <li><a href="produkty.html">objednávka</a></li>
                         <li><a href="kontakt.html">kontakt</a>
                         </li>
                     </ul>
@@ -73,6 +74,7 @@
         
         <table class="products-container">
             <thead class="product-header">
+                <th class="product-id">KÓD</th>
                 <th class="product-title">PRODUKT</th>
                 <th class="price">CENA PRODUKT</th>
                 <th class="quantity">MNOŽSTVO</th>
