--- a/produkty.html
+++ b/produkty.html
@@ -47,9 +47,7 @@
                     <ul id="navbar-2">
                         <li><a href="index.html">domov</a></li>
                         <li><a href="produkty.html">obchod</a></li>
-                        <!--<li><a href="">Promotion</a></li>
-                        <li><a href="">Pages</a></li>-->
-                        <li><a href="">Blog</a></li>
+                        <li><a href="objednavka.html">objednávka</a></li>
                         <li><a href="kontakt.html">kontakt</a>
                         </li>
                     </ul>
