--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>ESHOP_Valachova_Uzik</title>
+    <title>ESHOP_Uzik_Valachova</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -29,7 +29,7 @@
                 <ul id="navbar-1">
                     <!-- <li><a href="">USD<i class="fas fa-chevron-down"></i></a></li>
                     <li><a href="">English<i class="fas fa-chevron-down"></i></a></li> -->
-                    <li><a href="">Môj účet<i class="fas fa-chevron-down"></i></a></li>
+                    <li><a href="">Môj účet<i class="fas fa-chevron-down acount"></i></a></li>
                 </ul>
             </nav>
 
