--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="eshop.js"></script>
+    <script src="eshop-2.js"></script>
 </body>
 
 </html>
