formular, filter category

--- a/kontakt.html
+++ b/kontakt.html
@@ -27,9 +27,6 @@
 
             <nav>
                 <ul id="navbar-1">
-                    <li><a href="">USD</a><i class="fas fa-angle-down"></i>
-                    </li>
-                    <li><a href="">English</a><i class="fas fa-angle-down"></i></li>
                     <li><a href="">My account</a><i class="fas fa-angle-down"></i></li>
                 </ul>
             </nav>
@@ -47,15 +44,13 @@
                     <ul id="navbar-2">
                         <li><a href="index.html">domov</a></li>
                         <li><a href="produkty.html">obchod</a></li>
-                        <li><a href="kontakt.html">kontakt</a>
-                        </li>
+                        <li><a href="objednavka.html">objednávka</a></li>
+                        <li><a href="kontakt.html">kontakt</a></li>
                     </ul>
                 </nav>
                 <nav>
                     <ul id="navbar-3">
-                        <li><a href=""><i class="fas fa-search"></i></a></li>
-                        <li><a href=""><i class="fas fa-user"></i></a></li>
-                        <li><a href="kosik.html"><i class="fas fa-shopping-cart"></i></a></li>
+                        <li><a href="kosik.html"><i class="fas fa-shopping-cart"></i><span class="icon">0</span></a></li>
                     </ul>
                 </nav>
             </div>
@@ -109,7 +104,7 @@
 
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="../js/eshop.js"></script>
+    <script src="eshop-2.js"></script>
 </body>
 
 </html>
