--- a/kontakt.html
+++ b/kontakt.html
@@ -27,7 +27,7 @@
 
             <nav>
                 <ul id="navbar-1">
-                    <li><a href="">My account</a><i class="fas fa-angle-down"></i></li>
+                    <li><a href="">Môj účet<i class="fas fa-chevron-down"></i></a></li>
                 </ul>
             </nav>
 
