--- a/objednavka.html
+++ b/objednavka.html
@@ -27,8 +27,7 @@
 
             <nav>
                 <ul id="navbar-1">
-                   
-                    <li><a href="">My account</a><i class="fas fa-angle-down"></i></li>
+                    <li><a href="">Môj účet<i class="fas fa-chevron-down"></i></a></li>
                 </ul>
             </nav>
 
@@ -58,7 +57,7 @@
         </section>
     </header>
 
-<!---------------------------------------------------- objednavkovy formulár---------------------------------------------------------->
+<!----------------------------------------- objednavkovy formulár--------------------------------------->
 
     <form action="http://codetime.sk/itvkurze/order.php" method="POST">
         <h2>Objednávkový formulár</h2>
@@ -97,7 +96,7 @@
         <button>Zrušiť objednávku</button>
     </form>
 
-<!--------------------------------------------------------------------------------------------------------------------------------->
+<!------------------------------------------------------------------------------------------------------------>
 
     <footer>
         <section class="footer-1">
