zmeny eshop-2.js produkt.html

--- a/produkt.html
+++ b/produkt.html
@@ -17,7 +17,8 @@
 
 </head>
 
-<body>
+<body>           
+            
     <header id="hore">
         <div class="head-1">
 
@@ -57,12 +58,13 @@
         </section>
     </header>
 
+    <!-- VYKRESLI PRODUKTY -->
+ <section> 
+    <div class="part-3">
+        <div id="details" class="good-box"></div>
+    </div>   
+</section>
     <!--VYKRESLI PRODUKTY-->
-    <section> 
-        <div class="part-3">
-            <div id="good" class="good-box"></div>
-        </div>   
-    </section>
         <!--VYKRESLI PRODUKTY-->
 
     <footer>
@@ -80,6 +82,7 @@
                     </div>
                 </div>
         </section>
+
 
 
         <section class="footer-2">
@@ -112,6 +115,7 @@
         </section>
 
     </footer>
+
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="eshop-2.js"></script>
