--- a/objednavka.html
+++ b/objednavka.html
@@ -50,7 +50,7 @@
                 </nav>
                 <nav>
                     <ul id="navbar-3">
-                        <li><a href=""><i class="fas fa-shopping-cart"></i><span class="icon">0</span></a></li>
+                        <li><a href="kosik.html"><i class="fas fa-shopping-cart"></i><span class="icon">0</span></a></li>
                     </ul>
                 </nav>
             </div>
@@ -151,4 +151,3 @@
 </html>
 
 
-po vypisani froduktv, ked dam filter, klikom na element <a> malo bz toyobraiy, vyfiltrovat len produkty, ktore maju v eshop.json category> women, ale ano vykresli spravne iba 1 a potom yase vsetky, akokebz uploadol opatovne z divu do ktoreho na zaciatku appendujem vsetky prdukty z jasonu, chapem , ze to je staticky div v html subore, ale neviem, to spravne zapisat v jquery, aj dam hide-nem ten povodz, kde je vsetko, ale aj tak to prekresli..
