--- a/produkty.html
+++ b/produkty.html
@@ -64,23 +64,24 @@
 
             <div class="category women">
                 <div class="theme">
-                    <a href="" id="w">women's</a>
+                    <a href="#" id="w">women's</a>
                 </div>
             </div>
 
             <div class="category accessories">
                 <div class="theme">
-                    <a href="" id="a">accessories's</a>
+                    <a href="#" id="a">accessories's</a>
                 </div>
             </div>
 
             <div class="category men">
                 <div class="theme">
-                    <a href="" id="m">men's</a>
+                    <a href="#" id="m">men's</a>
                 </div>
             </div>
 
         </div>
+        <div id="notFound"><h2>Hľadaný produkt nenašlo! </h2></div>
 
     </section>
 
