zmeny, kontakt, detail

--- a/produkt.html
+++ b/produkt.html
@@ -61,28 +61,12 @@
     <!-- VYKRESLI PRODUKTY -->
  <section> 
     <div class="part-3">
-        <div id="details" class="good-box"></div>
+        <div id="details" class="detail-box"></div>
     </div>   
 </section>
     <!--VYKRESLI PRODUKTY-->
 
     <footer>
-
-        <section>
-                <div class="footer-1">
-                    <div class="wrap-3">
-                        <h2>Novinky</h2>
-                        <h3>Subscribe to our newsletter and get 20% off your first purchase (TEXT ZMENIT!</h3>
-                    </div>
-
-                    <div class="confirm">
-                        <input id="myInput" type="text" placeholder="Hľadám tovar . . .">
-                        <button type="submit" id="myBtn"><i class="fas fa-search"></i></button>
-                    </div>
-                </div>
-        </section>
-
-
 
         <section class="footer-2">
 
@@ -91,7 +75,7 @@
                     <ul id="navbar-4">
                         <li><a href="">Blog</a></li>
                         <li><a href="">FAQs</a></li>
-                        <li><a href="">Contact us</a></li>
+                        <li><a href="">Kontaktujte nás</a></li>
                     </ul>
                 </nav>
 
@@ -107,9 +91,7 @@
 
             </div>
 
-            <p>
-                &#169;2018 All Rights Reserved. Thus template is made with <span><i class="far fa-heart "></i></span> by <span>Colorlib</span>
-            </p>
+            
 
         </section>
 
@@ -117,7 +99,7 @@
 
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="eshop-2.js"></script>
+    <script src="eshop-product.js"></script>
 </body>
 
 </html>
