--- a/produkty.html
+++ b/produkty.html
@@ -90,7 +90,7 @@
             <div class="footer-1">
                 <div class="wrap-3">
                     <h2>Novinky</h2>
-                    <h3>Subscribe to our newsletter and get 20% off your first purchase (TEXT ZMENIT!</h3>
+                    <h3>Prihláste sa na odber letáku s novinkami a získajte zľavu 20% z prvého nákupu</h3>
                 </div>
 
                 <div class="confirm">
@@ -113,21 +113,8 @@
     </section>
         <!--VYKRESLI PRODUKTY-->
 
-   </section>
+   
     <footer>
-        <section class="footer-1">
-
-            <div class="wrap-3">
-                <h2>Novinky</h2>
-                <h3>Prihláste sa na odber letáku s novinkami a získajte zľavu 20% z prvého nákupu</h3>
-            </div>
-
-            <div class="confirm">
-                <input type="text" placeholder='Váš email . . . '> <!--sem mozeme dat url s funkciou post!-->
-                <button type="submit"><i class="fas fa-check"></i></button>
-            </div>
-
-        </section>
 
         <section class="footer-2">
 
@@ -153,7 +140,7 @@
             </div>
 
             <p>
-                &#169;2020 All Rights Reserved. Thus template is made with <span><i class="far fa-heart "></i></span> by <span>Colorlib</span>
+                &#169; 2020 COOL<span>SHOP</span> 
             </p>
 
         </section>
